[gd_scene load_steps=12 format=3 uid="uid://cfnrcmhbfjjov"]

[ext_resource type="Script" path="res://Raccoon.gd" id="1_u8jvf"]
[ext_resource type="Texture2D" uid="uid://dfvxhyvur4ki7" path="res://sprites/racoon3.png" id="2_n4s51"]
[ext_resource type="Texture2D" uid="uid://bhafb8unuy51r" path="res://sprites/smallLightMask.png" id="3_41va2"]
[ext_resource type="AudioStream" uid="uid://crddspl6gk6su" path="res://Sounds/racoonspawn.ogg" id="4_maal6"]
[ext_resource type="AudioStream" uid="uid://bmlxxsc616mka" path="res://Sounds/racoonattack.ogg" id="5_8skwx"]
[ext_resource type="AudioStream" uid="uid://c63n25jqjkmvk" path="res://Sounds/bite.ogg" id="6_hafhe"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sjf03"]
atlas = ExtResource("2_n4s51")
region = Rect2(0, 0, 46, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_a58vc"]
atlas = ExtResource("2_n4s51")
region = Rect2(46, 0, 46, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjgah"]
atlas = ExtResource("2_n4s51")
region = Rect2(92, 0, 46, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nd2l"]
atlas = ExtResource("2_n4s51")
region = Rect2(138, 0, 46, 23)

[sub_resource type="SpriteFrames" id="SpriteFrames_7wqo1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjf03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a58vc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjgah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nd2l")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Raccoon" type="Node2D"]
script = ExtResource("1_u8jvf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -11)
sprite_frames = SubResource("SpriteFrames_7wqo1")

[node name="PointLight2D" type="PointLight2D" parent="AnimatedSprite2D"]
position = Vector2(-16, -6)
color = Color(0.851737, 0.181065, 0, 1)
energy = 2.0
texture = ExtResource("3_41va2")

[node name="SndSpawn" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_maal6")

[node name="SndAttack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_8skwx")

[node name="SndBite" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_hafhe")

[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
